--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.yaen</groupId>
 	<artifactId>yaen-starter</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 
@@ -13,7 +13,7 @@
 	<properties>
 		<!-- enviourment default to local, related to properties file -->
 		<env>local</env>
-		<yaen-starter.version>1.0.0-SNAPSHOT</yaen-starter.version>
+		<yaen-starter.version>1.1.0-SNAPSHOT</yaen-starter.version>
 
 		<!-- jdk version -->
 		<jdk.version>1.8</jdk.version>
@@ -919,7 +919,7 @@
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.xml</include>
-					<include>spring/jdbc-default.properties</include>
+					<include>config/jdbc-default.properties</include>
 				</includes>
 				<filtering>true</filtering>
 			</resource>
