--- a/assembly/pcweb/src/main/webapp/WEB-INF/web.xml
+++ b/assembly/pcweb/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,6 @@
 			classpath*:/spring/core-*.xml,
 			classpath*:/spring/biz-*.xml,
 			classpath*:/spring/dubbo-*.xml,
-			classpath*:/spring/web-*.xml,
 			<!-- for starter only project, need starter-common-*.xml -->
 			classpath*:/spring/starter-common-*.xml
 			<!-- for starter only project, need starter-dubbo-*.xml -->
@@ -49,7 +48,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>web-servlet.xml</param-value>
+			<param-value>classpath*:/spring/web-pcweb.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
